@@ -1,6 +1,8 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Options virtuser_* replaced with virtuser_* plugins
+- Plugin API: Implemented 'email2user' and 'user2email' hooks
 - Fix forwarding message omits CC header (#1486305)
 - Add 'default_charset' option to user preferences (#1485451)
 - Add 'delete_always' option to user preferences
